--- a/app/src/main/res/layout/my_camera.xml
+++ b/app/src/main/res/layout/my_camera.xml
@@ -4,7 +4,7 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent" >
 
-    <SurfaceView
+    <com.uuzuche.lib_zxing.view.AutoFitSurfaceView
         android:id="@+id/preview_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
